LANDING PAGE Alfin Adi Surya - 0110219088 - Kelas 3TI04

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ nav a:hover{
 #about h3{
     font-family: 'Bowlby One SC', cursive;
     margin-right: auto;
-    margin-left: auto;
+    /* margin-left: auto; */
 }
 
 
